--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,13 +31,10 @@
         android:id="@+id/picture"
         android:layout_width="216dp"
         android:layout_height="241dp"
+        android:layout_marginBottom="424dp"
         android:rotation="270"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="97dp" />
 
     <TextView
         android:id="@+id/display_text"
