--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:paddingTop="8dp"
         android:paddingEnd="16dp"
         android:paddingBottom="8dp"
-        android:text="Your Text"
+        android:text="..."
         android:textColor="#FAF9F6"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,6 +57,7 @@
         app:layout_constraintBottom_toTopOf="@+id/display_text">
 
         <ImageView
+            android:id="@+id/restart"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -65,6 +66,7 @@
             android:layout_gravity="center"/>
 
         <ImageView
+            android:id="@+id/exit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -73,6 +75,7 @@
             android:layout_gravity="center"/>
 
         <ImageView
+            android:id="@+id/delete"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -81,6 +84,7 @@
             android:layout_gravity="center"/>
 
         <ImageView
+            android:id="@+id/send"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
