--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,20 +112,21 @@
         android:layout_width="216dp"
         android:layout_height="241dp"
         android:visibility="visible"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintVertical_bias="0.03"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.13">
 
         <ImageView
             android:id="@+id/picture"
             android:layout_width="5dp"
             android:layout_height="5dp"
             android:rotation="270"
-            android:scaleX="70"
-            android:scaleY="70"
+            android:rotationY="180"
+            android:scaleX="100"
+            android:scaleY="100"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
