Fix theme color and style

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="google_yellow">#F4B400</color>
     <color name="google_green">#0F9D58</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#282C2F</color>
     <color name="white">#FAF9F6</color>
 </resources>
