--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,19 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/send_test"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:src="@drawable/send"
+        android:onClick="send_test_message"
+        android:text="good night!!"
+        android:contentDescription="Icon 4"
+        android:layout_gravity="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
         android:id="@+id/startCamera"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,42 +60,53 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:paddingBottom="8dp"
-        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/display_text">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/restart"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="fitCenter"
             android:layout_weight="1"
             android:src="@drawable/restart"
+            android:background="@android:color/transparent"
+            android:onClick="cmd_restart"
             android:contentDescription="Icon 1"
             android:layout_gravity="center"/>
 
-        <ImageView
+        <ImageButton
             android:id="@+id/exit"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="fitCenter"
             android:layout_weight="1"
             android:src="@drawable/exit"
+            android:background="@android:color/transparent"
+            android:onClick="cmd_exit"
             android:contentDescription="Icon 2"
             android:layout_gravity="center"/>
 
-        <ImageView
+        <ImageButton
             android:id="@+id/delete"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="fitCenter"
             android:layout_weight="1"
             android:src="@drawable/delete"
+            android:background="@android:color/transparent"
+            android:onClick="cmd_delete"
             android:contentDescription="Icon 3"
             android:layout_gravity="center"/>
 
-        <ImageView
+        <ImageButton
             android:id="@+id/send"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="fitCenter"
             android:layout_weight="1"
             android:src="@drawable/send"
+            android:background="@android:color/transparent"
+            android:onClick="cmd_enter"
             android:contentDescription="Icon 4"
             android:layout_gravity="center"/>
     </LinearLayout>
